# pbsql

./: .gitignore  Cargo.toml  README.md  build-rust.sh  build-wasm-nodejs.sh  build-wasm.sh  package.json  watch.sh
.github/workflows/: rust.yml
src/: lib.rs  object_name_replacer.rs  path_convertor.rs  reference_extractor.rs  sql_ast_traversal.rs  tql_validator.rs  treeqlite.rs
src/common/: mod.rs  split_by_line_and_trim_spaces.rs
src/snapshots/: pbsql__object_name_replacer__tests__a_function.snap  pbsql__object_name_replacer__tests__and_another.snap  pbsql__object_name_replacer__tests__another_select.snap  pbsql__object_name_replacer__tests__create_index.snap  pbsql__object_name_replacer__tests__create_index__no_name.snap  pbsql__object_name_replacer__tests__create_index__not_replaced.snap  pbsql__object_name_replacer__tests__create_index__replaced_no_schema.snap  pbsql__object_name_replacer__tests__create_index_compound_name.snap  pbsql__object_name_replacer__tests__create_index_compound_table_name.snap  pbsql__object_name_replacer__tests__create_table.snap  pbsql__object_name_replacer__tests__create_table__basic.snap  pbsql__object_name_replacer__tests__create_table__compound_identifier.snap  pbsql__object_name_replacer__tests__create_table__not_replaced.snap  pbsql__object_name_replacer__tests__create_table__outside_home_using_parent.snap  pbsql__object_name_replacer__tests__create_table__root.snap  pbsql__object_name_replacer__tests__create_table__using_curdir.snap  pbsql__object_name_replacer__tests__create_table__using_parent.snap  (+174 more)
(+4 files in other folders)
