[package]
name = "cabinet_sql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.4"
sqlparser = "0.43.1"
typed-path = "0.7.1"
wasm-bindgen = "0.2.90"
