[package]
name = "pbsql"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.196", features = ["derive"] }
serde-wasm-bindgen = "0.4"
sqlparser = { version = "0.43.1", features = ["serde"] }
tsify = "0.4.5"
typed-path = "0.7.1"
wasm-bindgen = "0.2.90"

[dev-dependencies]
insta = { version = "1.38.0", features = ["yaml"] }
serde_json = "1.0.117"
sqlformat = "0.2.3"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
